code linting now working, removed unused imports